<resources>
    <string name="app_name">Itzme</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="invalidPassword">The password must be greater than 4 characters </string>
    <string name="invalid_old_password">Invalid old password</string>
    <string name="password_match">Password doesn\'t match</string>
    <string name="invalidemail">Invalid Email</string>
    <string name="name_exist">User Name is Already Exist</string>
    <string name="invalid_user_name">User Name is Not Valid</string>
    <string name="email_or_password_wrong">Email or Password wrong</string>
    <string name="join_now">Join Now</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forget_your_password">Forget your password ?</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome_to_itzme">Welcome to itzme</string>
    <string name="log_in_to_continue">Log in to continue</string>
    <string name="provide_your_account_e_mail_for_which_you_want_to_reset_your_password">provide your account e-mail for which you want to reset your password</string>
    <string name="next">NEXT</string>
    <string name="back">Back</string>
    <string name="resend_the_code">Resend the code</string>
    <string name="please_enter_the_code_the_code_has_been_sent_to_your_e_mail">Please enter the code , the code has been sent to your e-mail</string>
    <string name="confirm">Confirm</string>
    <string name="wrong_code">Wrong code</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="my_profile">My Profile</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="change">Change</string>
    <string name="language">Language</string>
    <string name="my_account">My Contacts</string>
    <string name="english">English</string>
    <string name="arabic">عربي</string>
    <string name="settings">Settings</string>
    <string name="pet">Pet</string>
    <string name="if_you_find">If you find</string>
    <string name="view">view</string>
    <string name="home">Home</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="active">Activate</string>
    <string name="read_itzme">Read Itzme</string>
    <string name="my_qr">"My QR Code "</string>
    <string name="buy_itzme">Buy Itzme</string>
    <string name="how_to_use">How To Use Itzme</string>
    <string name="log_out">Log Out</string>
    <string name="old_password">Old Password</string>
    <string name="email_exist">This email is already exists</string>
    <string name="direct_off">Direct Off</string>
    <string name="direct_on">Direct On</string>
    <string name="share_profile_link">Share profile link</string>
    <string name="my_qr_code">My QR Code</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="bio">Bio</string>
    <string name="you_didn_t_add_any_link_yet">You didn\'t add any link yet</string>
    <string name="my_links">My Links</string>
    <string name="make_profile_public">Make profile public</string>
    <string name="allow_others_to_view_profile_online_tap_here_to_add_link_to_any_bio">Allow others to view profile online . Tap here to add link to any bio.</string>
    <string name="all_links">All Links</string>
    <string name="contacts">Contacts</string>
    <string name="link">Link</string>
    <string name="invalid_link">Invalid Link</string>
    <string name="open">Open</string>
    <string name="change_name">Change Name</string>
    <string name="activate">ACTIVATE</string>
    <string name="about_pet">About Pet</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="pet_type">Pet type</string>
    <string name="pet_name">Pet name</string>
    <string name="information">Information</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="invalid">Invalid</string>
    <string name="invalidPhone">Invalid Phone</string>
    <string name="for_pets">For Pets</string>
    <string name="address">Address</string>
    <string name="blood_type">Blood Type</string>
    <string name="about">About</string>
    <string name="deactive">DEACTIVATE</string>
    <string name="no_contact_found">No contact found</string>
    <string name="error">Error</string>
    <string name="which_itzme_product_would_you_n_activate">Which itzme product would you\n activate ?</string>
    <string name="tap_here_to_activate">Tap Here To Activate</string>
    <string name="your_itzme_will_be_activated_with_the_profile">your itzme will be activated with the profile</string>
    <string name="no_product_found">No Product Found</string>
    <string name="skip">Skip</string>
    <string name="your_new_password">Your new password</string>
    <string name="your_identity_has_been_verified_set_your_new_password">Your identity has been verified set your new password</string>
    <string name="set_new_password">Set New Password</string>
    <string name="itzme_on">Itzme On</string>
    <string name="itzme_off">Itzme Off</string>
    <string name="change_email">Change E-mail</string>
    <string name="resend_code_success">Resend Code Successfully</string>
    <string name="no_nfc">This device doesn\'t support NFC.</string>
    <string name="nfc_disabled">NFC Disabled</string>
    <string name="enable_nfc">Please Enable Nfc</string>
    <string name="ready_to_scan">READY TO SCAN</string>
    <string name="hold_an_itzme_to_the_middle_back_of_your_phone_to_scan_it">hold an itzme to the middle back of your phone to Scan It!</string>
    <string name="reading_success">Reading NFC Successfully</string>
    <string name="profile">Profile</string>
    <string name="user_name">User name</string>
    <string name="create_an_account">Create an account</string>
    <string name="already_have_an_account">Already Have An Account ?</string>
    <string name="active_product">Active Product</string>
    <string name="copy">Copy</string>
    <string name="profile_updated">Profile Updated Successfully</string>
    <string name="how_iphone">How to itz to iphone</string>
    <string name="content1_iphone">"Tap your itzme to the very top to itz to an iPhone XR and newer   "</string>
    <string name="content2_iphone">Older iPhones can use the NFC widget in control center to read your itzme</string>
    <string name="how_android">How to itz to android</string>
    <string name="content1_android">"Tap your itzme to the middle to itz to Android  "</string>
    <string name="content2_android">Make sure they have NFC turned on in settings! Some Androids have this off</string>
    <string name="how_direct">itzme Direct</string>
    <string name="content1_direct">"Tap your itzme to the middle to itz to Android  "</string>
    <string name="content2_direct">When itzme Direct is on, your itzme will open directly to the first link on your profile</string>
    <string name="how_profile">Your itzme profile</string>
    <string name="content1_profile">"Turn itzme Direct off to share your full itzme Profile "</string>
    <string name="content2_profile">Your itzme Profile is fully customizable, and links can be sorted using drag and drop</string>
    <string name="how_qr">your qr code</string>
    <string name="content1_qr">"Use your itzme QR Code to share with older Phone models "</string>
    <string name="content2_qr">Your QR Code can be accessed on the top right of your profile and in the main menu</string>
    <string name="how_use_get_itzme">let’s get itzme</string>
    <string name="content1_use_get_itzme">Your view count is the number of times you share with itzme</string>
    <string name="content2_use_get_itzme">Your QR Code can be accessed on the top right of your profile and in the main menu</string>
    <string name="remove">Remove</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="user_name_hint">username</string>
    <string name="hyper_link">hyperlink</string>
    <string name="he_didn_t_add_any_link_yet">Meet username in person to see their itzme profile</string>
</resources>